@@ -34,7 +34,7 @@ CONFIGURATION
         Directory where Apache::Gallery should create its cache with scaled
         pictures. The default is /var/tmp/Apache-Gallery/ . Here, a
         directory for each virtualhost or location will be created
-        automaticly. Make sure your webserver has write access to the
+        automatically. Make sure your webserver has write access to the
         CacheDir.
 
     GalleryTemplateDir
@@ -139,7 +139,7 @@ CONFIGURATION
         GalleryInfo will be available to your templates as $EXIF_<KEYNAME>
         (in all uppercase). That means that with the default setting
         "Picture Taken => DateTimeOriginal, Flash => Flash" you will have
-        the variables $EXIF_DATETIMEORIGINAL and $EXIF_FLASH avilable to
+        the variables $EXIF_DATETIMEORIGINAL and $EXIF_FLASH available to
         your templates. You can place them anywhere you want.
 
     GalleryRootPath
@@ -251,7 +251,7 @@ FEATURES
     Rotate images
         Some cameras, like the Canon G3, detects the orientation of a
         picture and adds this info to the EXIF header. Apache::Gallery
-        detects this and automaticly rotates images with this info.
+        detects this and automatically rotates images with this info.
 
         If your camera does not support this, you can rotate the images
         manually, This can also be used to override the rotate information
@@ -259,7 +259,7 @@ FEATURES
         with the GalleryAutoRotate option.
 
         To use this functionality you have to create file with the name of
-        the picture you want rotated appened with ".rotate". The file should
+        the picture you want rotated appended with ".rotate". The file should
         include a number where these numbers are supported:
 
                 "1", rotates clockwise by 90 degree
